tests/reliability/reject/assert_fail.keel
def main(sys: System); Io:
    assert_eq(1, 2)
